--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,11 +1,17 @@
-.container {
-  min-height: 100vh;
-  padding: 0 0.5rem;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
+.homeMain {
+  margin-top: 100px;
+  padding: 0px 180px;
+}
+
+.homePic {
+  width: 300px;
+  height: 300px;
+  border-radius: 1000px;
+  background-color: #444;
+  border: 18px solid #444;
+  -webkit-box-shadow: 0 0 25px 0 rgb(0 0 0 / 80%);
+  -moz-box-shadow: 0 0 25px 0 rgba(0,0,0,.8);
+  box-shadow: 0 0 25px 0 rgb(0 0 0 / 80%);
 }
 
 .main {
@@ -111,6 +117,20 @@
 .logo {
   height: 1em;
   margin-left: 0.5rem;
+}
+
+.homeName {
+  font-size: 48px;
+  line-height: 56px;
+  margin-top: 0;
+  margin-bottom: 20px;
+  font-weight: 900;
+}
+
+.homeBio {
+  font-size: 14px;
+  color: #d5d5d5;
+  margin: 0 0 10px;
 }
 
 @media (max-width: 600px) {
