--- a/styles/globals.css
+++ b/styles/globals.css
@@ -14,3 +14,89 @@ a {
 * {
   box-sizing: border-box;
 }
+
+.main-app {
+  background-color: #222;
+  height: 100vh;
+  min-height: 100v;
+}
+
+.app-text-color {
+  color: #fff;
+}
+
+.custom-link {
+  color: #f5f5f5;
+  text-decoration: none;
+  line-height: 50px;
+  font-size: 14px;
+  opacity: 0.55;
+}
+
+.margin-left-10 {
+  margin-left: 10px;
+}
+
+.margin-left-20 {
+  margin-left: 20px;
+}
+
+.ph-50 {
+  padding: 0px 50px;
+}
+
+.home-title-16 {
+  color: #f5f5f5;
+  text-decoration: none;
+  line-height: 50px;
+  font-size: 16px;
+  opacity: 0.55;
+}
+
+.c-btn-primary {
+  display: inline-block !important;
+  position: relative !important;
+  padding: 0.8em 2.1em !important;
+  margin-bottom: 0.75em !important;
+  margin-right: 0.25em !important;
+  font-size: 1em !important;
+  line-height: 1.2 !important;
+  border: 0 !important;
+  outline: 0 !important;
+  border: 2px solid #007ced !important;
+  color: #fff !important;
+  text-shadow: none !important;
+  background-color: #333 !important;
+  border-radius: 30px !important;
+  font-family: poppins, Helvetica, sans-serif !important;
+  -webkit-transition: all 0.3s ease-in-out !important;
+  -moz-transition: all 0.3s ease-in-out !important;
+  -o-transition: all 0.3s ease-in-out !important;
+  -ms-transition: all 0.3s ease-in-out !important;
+  transition: all 0.3s ease-in-out !important;
+  box-shadow: 0 10px 10px -8px rgb(0 0 0 / 78%) !important  ;
+}
+
+.c-btn-link {
+  display: inline-block !important;
+  position: relative !important;
+  padding: 0.8em 2.1em !important;
+  margin-bottom: 0.75em !important;
+  margin-right: 0.25em !important;
+  font-size: 1em !important;
+  line-height: 1.2 !important;
+  border: 3 solid !important;
+  outline: 0 !important;
+  border-color: #d5d5d5 !important;
+  color: #fff !important;
+  text-shadow: none !important;
+  background-color: #333 !important;
+  border-radius: 30px !important;
+  font-family: poppins, Helvetica, sans-serif !important;
+  -webkit-transition: all 0.3s ease-in-out !important;
+  -moz-transition: all 0.3s ease-in-out !important;
+  -o-transition: all 0.3s ease-in-out !important;
+  -ms-transition: all 0.3s ease-in-out !important;
+  transition: all 0.3s ease-in-out !important;
+  box-shadow: 0 10px 10px -8px rgb(0 0 0 / 78%) !important;
+}
